# fambb-api

./: .dockerignore  .env.database  .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  costs  db.sqlite3  docker-compose.yaml  migrate.py  pyproject.toml  pyrightconfig.json
.github/workflows/: cicd.yml
requirements/: dev.txt  main.txt
scripts/: create_cost_category.py  create_currency.py  create_user.py  deploy.sh  migrate.py  set_password.py
src/: __init__.py  main.py
src/config/: __init__.py
src/contracts/: __init__.py  analytics.py  currency.py  equity.py  shortcuts.py  transactions.py  users.py
src/domain/: __init__.py  users.py
src/domain/authorization/: __init__.py
src/domain/equity/: __init__.py  entities.py  repository.py
src/domain/finances/: __init__.py  entities.py  repository.py
src/domain/notifications/: __init__.py  entities.py  services.py
src/domain/transactions/: __init__.py  ai.py  constants.py  data_transformation.py  entities.py  formatters.py  repository.py  types.py  validators.py  value_objects.py
src/domain/users/: __init__.py  aggregates.py  entities.py  repository.py
src/http/: __init__.py
src/http/contracts/: __init__.py  _mixins.py  _query_params.py  analytics.py  currency.py  equity.py  identity.py  notifications.py  shortcuts.py  transactions.py  users.py
src/http/resources/: analytics.py  costs.py  currencies.py  exchange.py  identity.py  incomes.py  notifications.py  transactions.py  users.py
src/infrastructure/: __init__.py  cache.py  dates.py  entities.py  factories.py  hooks.py  middleware.py  responses.py  security.py  types.py
src/infrastructure/database/: __init__.py  cqs.py  repository.py  session.py  tables.py  transaction.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 0548e68f5bd7_.py  094b85889fa5_.py  0a6050da347f_.py  0b82152e04b3_.py  2aee30d028ce_.py  3ba9fbfef1fa_.py  3ef6fd0f6aaf_.py  40c666676def_.py  5808057ca17e_.py  582ba7eac761_.py  5a529d616e33_.py  66892f114cc0_.py  79a0d6d194ca_.py  846d02b14a2d_.py  8c1cfe8e8700_.py  8d9ab73e9165_.py  8ed087c0b37f_.py  a125e6ac95d6_.py  b36a0ba44cb0_.py  b6f2c5d8783b_.py  c054daee0649_.py  c4952a3a5624_.py  cc52aac9ed5e_make_user_token_unique.py  ce41eb9a60cc_.py  e718179ea572_.py  e787ed8f47cb_initial.py  ea658b49d015_.py  ec492f05e5d5_.py  fb620f20c2ad_.py  fce495e00337_.py
src/infrastructure/errors/: __init__.py  exceptions.py  handlers.py
src/infrastructure/repository/: __init__.py
src/integrations/: __init__.py  monobank.py
src/operational/: __init__.py  analytics.py  authentication.py  authorization.py  notifications.py  transactions.py  users.py
src/operations/: __init__.py  analytics.py  transactions.py
src/rest/: __init__.py  analytics.py  costs.py  currencies.py  exchange.py  incomes.py  transactions.py  users.py
tests/: __init__.py  conftest.py  mock_storage.py  utils.py
tests/integration/: conftest.py  test_analytics.py  test_currencies.py  test_equity.py  test_monobank.py  test_notifications.py  test_transactions.py  test_user.py
tests/integration/notifications/: test_auto_notifications.py
tests/integration/transactions/: conftest.py  test_cost_shortcut.py  test_costs.py  test_currency_exchange.py  test_income.py  test_lookup_missing.py
tests/mock/: __init__.py  cache.py
tests/mock/response/: monobank_personal_info.json
tests/unit/: test_database.py
